@@ -5,18 +5,15 @@ import static org.assertj.core.api.Assertions.assertThat;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.stream.Collectors;
 
 import org.apache.commons.io.FileUtils;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-
-import org.kosit.validator.api.InputFactory;
-import org.kosit.validator.impl.Helper;
-import org.kosit.validator.impl.Helper.Simple;
+import org.kosit.validator.impl.TestHelper;
+import org.kosit.validator.impl.TestHelper.Simple;
 import org.kosit.validator.impl.TestObjectFactory;
-import org.kosit.validator.impl.tasks.CheckAction;
+import org.kosit.validator.impl.tasks.CheckTask;
 import org.kosit.validator.impl.tasks.TestProcessBuilder;
 
 /**
@@ -43,13 +40,13 @@ public class ExtractReportContentActionTest {
 
     @Test
     public void testSimple() throws IOException {
-        assertThat(this.action.isSkipped(TestProcessBuilder.create(InputFactory.read(Simple.SIMPLE_VALID)).build())).isTrue();
-        final CheckAction.Process process = TestProcessBuilder.create(InputFactory.read(Simple.SIMPLE_VALID))
-                .setCreateReport(Helper.load(Simple.SIMPLE_VALID)).build();
+        assertThat(this.action.isSkipped(TestProcessBuilder.create(TestHelper.read(Simple.SIMPLE_VALID)).build())).isTrue();
+        final CheckTask.Process process = TestProcessBuilder.create(TestHelper.read(Simple.SIMPLE_VALID))
+                .setCreateReport(TestHelper.load(Simple.SIMPLE_VALID)).build();
         this.action.check(process);
         assertThat(this.action.isSkipped(process)).isFalse();
         this.action.check(process);
         assertThat(process.isStopped()).isFalse();
-        assertThat(Files.list(this.tmpDirectory).collect(Collectors.toList())).hasSize(1);
+        assertThat(Files.list(this.tmpDirectory).toList()).hasSize(1);
     }
 }
