@@ -2,12 +2,11 @@ package org.kosit.validator.impl;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.kosit.validator.api.AcceptRecommendation;
-import org.kosit.validator.api.Result;
+import org.kosit.validator.api.VResult;
 import org.kosit.validator.api.XmlError;
-import org.kosit.validator.impl.tasks.ReaderWrapper;
+import org.kosit.validator.impl.xml.XMLReaderWrapper;
 import org.kosit.xvrl.impl.XvrlConversionService;
 import org.kosit.xvrl.model.XVRLReportSummary;
 import org.oclc.purl.dsdl.svrl.FailedAssert;
@@ -22,7 +21,8 @@ import net.sf.saxon.s9api.Processor;
 import net.sf.saxon.s9api.SaxonApiException;
 import net.sf.saxon.s9api.XdmNode;
 
-public class DefaultResult implements Result {
+@Deprecated(since = "2.0.0", forRemoval = true)
+public class DefaultResult implements VResult {
 
     /** The internal report 'preliminary stage' produced by the validator */
     private XVRLReportSummary reportSummary;
@@ -38,10 +38,12 @@ public class DefaultResult implements Result {
 
     private boolean wellformed;
 
+    @Deprecated(since = "2.0.0", forRemoval = true)
     public DefaultResult(final AcceptRecommendation recommendation) {
         this.acceptRecommendation = recommendation;
     }
 
+    @Deprecated(since = "2.0.0", forRemoval = true)
     @Override
     public XdmNode getReport() {
         final Marshaller marshaller;
@@ -49,7 +51,7 @@ public class DefaultResult implements Result {
             marshaller = new XvrlConversionService().getJaxbContext().createMarshaller();
             final JAXBSource source = new JAXBSource(marshaller, getReportSummary());
             // wrap to circumvent inconsistency between sax and saxon
-            source.setXMLReader(new ReaderWrapper(source.getXMLReader()));
+            source.setXMLReader(new XMLReaderWrapper(source.getXMLReader()));
             return new Processor(false).newDocumentBuilder().build(source);
         } catch (JAXBException | SaxonApiException e) {
             e.printStackTrace();
@@ -57,6 +59,7 @@ public class DefaultResult implements Result {
         return null;
     }
 
+    @Deprecated(since = "2.0.0", forRemoval = true)
     @Override
     public List<String> getProcessingErrors() {
         return reportSummary.getAllErrors();
@@ -67,6 +70,7 @@ public class DefaultResult implements Result {
      *
      * @return the report
      */
+    @Deprecated(since = "2.0.0", forRemoval = true)
     @Override
     public Document getReportDocument() {
         return (Document) NodeOverNodeInfo.wrap(getReport().getUnderlyingNode());
@@ -77,11 +81,13 @@ public class DefaultResult implements Result {
      *
      * @return true if {@link AcceptRecommendation#ACCEPTABLE}
      */
+    @Deprecated(since = "2.0.0", forRemoval = true)
     @Override
     public boolean isAcceptable() {
         return isProcessingSuccessful() && AcceptRecommendation.ACCEPTABLE.equals(this.acceptRecommendation);
     }
 
+    @Deprecated(since = "2.0.0", forRemoval = true)
     @Override
     public boolean isSchemaValid() {
         return getSchemaViolations() != null && getSchemaViolations().isEmpty();
@@ -92,11 +98,12 @@ public class DefaultResult implements Result {
      *
      * @return the {@link FailedAssert}
      */
+    @Deprecated(since = "2.0.0", forRemoval = true)
     @Override
     public List<FailedAssert> getFailedAsserts() {
         return getSchematronResult() != null
                 ? getSchematronResult().stream().flatMap(e -> e.getActivePatternOrActiveGroupAndFiredRule().stream())
-                        .filter(FailedAssert.class::isInstance).map(FailedAssert.class::cast).collect(Collectors.toList())
+                        .filter(FailedAssert.class::isInstance).map(FailedAssert.class::cast).toList()
                 : Collections.emptyList();
     }
 
@@ -105,6 +112,7 @@ public class DefaultResult implements Result {
                 && getSchematronResult().stream().noneMatch(e -> e.getActivePatternOrActiveGroupAndFiredRule().isEmpty());
     }
 
+    @Deprecated(since = "2.0.0", forRemoval = true)
     @Override
     public boolean isSchematronValid() {
         return isSchematronEvaluated() && getFailedAsserts().isEmpty();
@@ -113,10 +121,12 @@ public class DefaultResult implements Result {
     /**
      * Die vom Validator erstelle interne Berichts-'Vorstufe'
      */
+    @Deprecated(since = "2.0.0", forRemoval = true)
     public XVRLReportSummary getReportSummary() {
         return this.reportSummary;
     }
 
+    @Deprecated(since = "2.0.0", forRemoval = true)
     /**
      * Die vom Validator erstelle interne Berichts-'Vorstufe'
      */
@@ -127,38 +137,47 @@ public class DefaultResult implements Result {
     /**
      * Das evaluierte Ergebnis.
      */
+    @Deprecated(since = "2.0.0", forRemoval = true)
     public AcceptRecommendation getAcceptRecommendation() {
         return this.acceptRecommendation;
     }
 
+    @Deprecated(since = "2.0.0", forRemoval = true)
     void setSchemaViolations(final List<XmlError> schemaViolations) {
         this.schemaViolations = schemaViolations;
     }
 
+    @Deprecated(since = "2.0.0", forRemoval = true)
     public List<XmlError> getSchemaViolations() {
         return this.schemaViolations;
     }
 
+    @Deprecated(since = "2.0.0", forRemoval = true)
     public List<SchematronOutputType> getSchematronResult() {
         return this.schematronResult;
     }
 
+    @Deprecated(since = "2.0.0", forRemoval = true)
     void setSchematronResult(final List<SchematronOutputType> schematronResult) {
         this.schematronResult = schematronResult;
     }
 
+    @Deprecated(since = "2.0.0", forRemoval = true)
     public boolean isProcessingSuccessful() {
         return this.processingSuccessful;
     }
 
+    @Deprecated(since = "2.0.0", forRemoval = true)
     public void setProcessingSuccessful(final boolean processingSuccessful) {
         this.processingSuccessful = processingSuccessful;
     }
 
+    @Deprecated(since = "2.0.0", forRemoval = true)
     public boolean isWellformed() {
         return this.wellformed;
     }
 
+    @Deprecated(since = "2.0.0", forRemoval = true)
     public void setWellformed(final boolean wellformed) {
         this.wellformed = wellformed;
     }
